# psyche

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  garnix.yaml
config/nanogpt-124m/: state.toml
config/test-nanogpt-distro-shakespeare-lonly/: state.toml
config/test-nanogpt-distro-shakespeare-lonly-fp/: state.toml
config/test-nanogpt-distro-shakespeare-sssl/: state.toml
config/test-nanogpt-distro-shakespeare-sssl-100/: state.toml
config/test-nanogpt-distro-shakespeare-sssl-fp/: state.toml
nix/: nixosModules.nix  nixpkgs.nix
psyche-book/: book.toml  default.nix
psyche-book/src/: SUMMARY.md
psyche-book/src/development/: index.md  optimizers.md
psyche-book/src/explain/: distro.md  matformer.md
python/: default.nix
scripts/: create_llama_20m.py  create_nanogpt_llama_matched.py  package-centralized-mac.sh  psyche-env.sh  regression_baseline.sh  run_heterogeneous_with_wandb.sh  run_with_wandb.sh  stress_test.sh  stress_test_matrix.sh
shared/client/: Cargo.toml
shared/client/src/: cli.rs  client.rs  lib.rs  matformer.rs
shared/client/tests/: matformer_metadata.rs
shared/data-provider/src/: hub.rs  lib.rs  local.rs
shared/modeling/: Cargo.toml
shared/modeling/examples/: compare_metrics.rs  dct_compare.rs  train.rs
shared/modeling/src/: attention.rs  causal_language_model.rs  distro.rs  lib.rs  matformer_helper.rs  metrics.rs  muon.rs  rope.rs  trainer.rs
shared/modeling/src/kernels/: mod.rs  orthogonalize.rs
shared/modeling/src/models/: llama.rs  nanogpt.rs
shared/watcher/src/: lib.rs  traits.rs
website/frontend/: package.json
(+11 files in other folders)
